crates/cribo/tests/snapshots/execution_results@requirements_distribution_mapping.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/requirements_distribution_mapping/main.py
---
ExecutionResults {
    status: Success,
    stdout: "alpha:beta",
    stderr: "",
}
