crates/cribo/tests/snapshots/execution_results@sourcemap_basic.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/sourcemap_basic/main.py
---
ExecutionResults {
    status: Success,
    stdout: "total = 5\nproduct = 20",
    stderr: "",
}
