crates/cribo/tests/snapshots/execution_results@sys_modules_assigned_alias.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/sys_modules_assigned_alias/main.py
---
ExecutionResults {
    status: Success,
    stdout: "provider loaded\nregistered: True",
    stderr: "",
}
