crates/cribo/tests/snapshots/execution_results@sys_modules_consumer_identity.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/sys_modules_consumer_identity/main.py
---
ExecutionResults {
    status: Success,
    stdout: "dep loaded\nby dynamic key: True\nby literal key: True\nvalue: observable",
    stderr: "",
}
