crates/cribo/tests/snapshots/execution_results@sys_modules_failed_init.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/sys_modules_failed_init/main.py
---
ExecutionResults {
    status: Success,
    stdout: "caught: False\nretried and raised again",
    stderr: "",
}
