crates/cribo/tests/snapshots/execution_results@sys_modules_keys_view.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/sys_modules_keys_view/main.py
---
ExecutionResults {
    status: Success,
    stdout: "provider loaded\npresent: True",
    stderr: "",
}
