crates/cribo/tests/snapshots/execution_results@sys_modules_self_replacement.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/sys_modules_self_replacement/main.py
---
ExecutionResults {
    status: Success,
    stdout: "replacement",
    stderr: "",
}
