crates/cribo/tests/snapshots/execution_results@target_version_stdlib_classification.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/target_version_stdlib_classification/main.py
---
ExecutionResults {
    status: Success,
    stdout: "<class 'graphlib.TopologicalSorter'>\n<class 'zoneinfo.ZoneInfo'>",
    stderr: "",
}
